# DesignPatternsCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.run/: BF Tests.run.xml  Builder Tests.run.xml  Decorator Tests.run.xml  Dependency Injection Tests.run.xml  Iterators Tests.run.xml  Singleton Tests.run.xml  TicTacToe Tests.run.xml  Visitor Tests.run.xml  bf - with 99-bottles.bf.run.xml  bf - with hello.bf.run.xml
contrib/: CMakeLists.txt
src/: CMakeLists.txt
src/behavioral/: CMakeLists.txt
src/behavioral/iterators/: CMakeLists.txt  int_range.cxx  int_range.hxx  int_range_tests.cxx
src/behavioral/iterators_c/: CMakeLists.txt  int_range.c  int_range.h  iterator.h  main.c
src/behavioral/visitor/: CMakeLists.txt  circle.cxx  circle.hxx  rectangle.cxx  rectangle.hxx  shape.hxx  shape_visitor.cxx  shape_visitor.hxx  shape_visitor_tests.cxx
src/creational/: CMakeLists.txt
src/creational/builder/: CMakeLists.txt  server_config.cxx  server_config.hxx  server_config_tests.cxx
src/creational/builder_c/: CMakeLists.txt  main.c  server_config.h
src/creational/singleton/: CMakeLists.txt  conditional_singleton_tests.cxx  constructible.cxx  constructible.hxx  constructible_tests.cxx  non_constructible.cxx  non_constructible.hxx  non_constructible_tests.cxx  static.cxx  static.hxx  static_tests.cxx
src/exercises/: CMakeLists.txt
src/exercises/bf/: CMakeLists.txt  README.md  instruction.cxx  instruction.hxx  instruction_tests.cxx  interpreter.hxx  main.cxx  vm.cxx  vm.hxx  vm_tests.cxx
src/exercises/bf/examples/: hello.bf
src/exercises/data_processor/: CMakeLists.txt
src/exercises/data_processor/core/: console.cxx  console.hxx  main.cxx
src/exercises/data_processor/core/api/: data_converter.hxx  data_processor.hxx  data_source.hxx  data_storage.hxx  output_device.hxx  package.hxx
src/exercises/data_processor/plugins/converters/noop_converter/: noop_converter.cxx
src/exercises/data_processor/plugins/processors/printer/: printer.cxx
src/exercises/data_processor/plugins/sources/dummy_source/: dummy_source.cxx
src/exercises/data_processor/plugins/storage/list_buffer/: list_buffer.cxx
src/exercises/tictactoe/: CMakeLists.txt  board.hxx  game.cxx  game.hxx  game_state.cxx  game_state.hxx  game_tests.cxx  main.cxx  player.hxx  renderer.hxx  stream_renderer.cxx  stream_renderer.hxx  stream_renderer_tests.cxx
src/other/: CMakeLists.txt
src/other/dependency_injection/: CMakeLists.txt  greeter.cxx  greeter.hxx  injector_tests.cxx  mock_writer.hxx  writer.cxx  writer.hxx
src/other/pimpl/: CMakeLists.txt  foo.cxx  foo.hxx  foo_tests.cxx
src/structural/decorator/: CMakeLists.txt  combined_tests.cxx  decorator.hxx  mock_printer.hxx  prefixing.cxx  prefixing.hxx  prefixing_tests.cxx  printer.hxx  reversing.cxx  reversing.hxx  reversing_tests.cxx  shouting.cxx  shouting.hxx  shouting_tests.cxx  stream_printer.cxx  stream_printer.hxx  stream_printer_tests.cxx
